--- a/app/views/hosteller/index.html.erb
+++ b/app/views/hosteller/index.html.erb
@@ -1,7 +1,7 @@
 <input type="text" id="users"/>
 <input type="button" id="search-btn" value="Search"/>
 <ul>
-  <li><%= button_to 'Add New', create_hosteller_path, :method => :get %></li>
+  <li><%= button_to 'Add New', new_hosteller_path, :method => :get %></li>
 </ul>
 
 <div id="hosteller-data">
