--- a/app/views/hosteller/new.html.erb
+++ b/app/views/hosteller/new.html.erb
@@ -1,7 +1,10 @@
-<%= form_for(@hosteller, url: hostellers_create_path ,html: {class: 'form-horizontal'}) do |f| %>
+<%= form_for(@hosteller, url: hosteller_create_path , html: {class: 'form-horizontal'}, id: @hosteller.id) do |f| %>
   <div>
     <h1 style="text-align: center;">New Hosteller Application form</h1>
   </div>
+
+  <input type="hidden" name= "hosteller_id" id="hosteller_id" value="<%= @hosteller.id %>">
+
   <div class="form-group">
     <div class="col-sm-3">
       <%= f.label :hosteller_name, 'Hosteller Name' %>
@@ -88,7 +91,7 @@
         <%= f.label :building_id, "Building" %>
       </div>
         <div class='col-sm-5'>
-          <%= f.text_field :building_id, class: 'form-control' %>
+          <%= f.select( :building_id, options_for_select(get_all_buildings), {:prompt => 'Select Building Name'}, {:class => "form-control"}) %>
         </div>
     </div>
 
