implemented sessions - login and logout page

--- a/app/views/hosteller/new.html.erb
+++ b/app/views/hosteller/new.html.erb
@@ -16,6 +16,16 @@
 
   <div class="form-group">
     <div class="col-sm-3">
+      <%= f.label :fees, 'Fees' %>
+    </div>
+    <div class='col-sm-5'>
+      <%= f.text_field :fees, class: 'form-control' %>
+    </div>
+  </div>
+
+
+  <div class="form-group">
+    <div class="col-sm-3">
       <%= f.label :hosteller_number, 'Hosteller Number' %>
     </div>
       <div class='col-sm-5'>
