--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,7 +1,6 @@
 <% flash.each do |type, message| %>
-  <div class="margin-top alert <%= bootstrap_class_for(type) %> fade in <% if @show_after_header %> margin-top-65px <% end %>">
+  <div class="alert <%= bootstrap_class_for(type) %> fade in">
     <button class="close" data-dismiss="alert">×</button>
-    <span class="<%= glyphicon_class_for(type) %> "></span>
     <%= message %>
   </div>
 <% end %>
