--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,18 @@
 <html>
 <head>
   <title>Project</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= render partial: "shared/header"%>
 <%= render partial: "shared/flash_messages", flash: flash %>
+
 <%= yield %>
+
+<%= render partial: "shared/footer"%>
 
 </body>
 </html>
