--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,7 @@
       <li><a href="<%= hostellers_path %>">Hostellers</a></li>
       <li><a href="#">Finance</a></li>
       <li><a href="#">Page 3</a></li>
+      <li><a href="<%= logout_path %>" style="float:right;">Logout</a></li>
     </ul>
   </div>
   <div class="footer"></div>
