--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="<%= admin_path %>">Home</a></li>
       <li><a href="<%= hostellers_path %>">Hostellers</a></li>
-      <li><a href="#">Finance</a></li>
+      <li><a href="<%= buildings_path %>">Building(s)</a></li>
       <li><a href="#">Page 3</a></li>
       <li><a href="<%= logout_path %>" style="float:right;">Logout</a></li>
     </ul>
