--- a/app/assets/stylesheets/fixed_assets.scss
+++ b/app/assets/stylesheets/fixed_assets.scss
@@ -9,3 +9,19 @@
   color: black;
   text-align: center;
 }
+
+.no-margin-btm{
+  margin-bottom: unset !important;
+}
+
+.btn-custom,.btn-custom:hover,.btn-custom:focus{
+  background-color: #196ae5;
+  color:#ffffff !important;
+  font-size:14px;
+  border-radius: 26px;
+  /* border-radius: calc(100%/2); */
+  padding:12px 30px;
+  //text-transform:uppercase;
+  outline:0;
+  font-weight:400 !important;
+}
