--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse no-margin-btm">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="<%= admin_path %>">HostelMate</a>
