--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -34,5 +34,5 @@
     </div>
   </div>
 
-  <%= f.submit 'Submit', class: 'btn btn-primary', id: 'add-new-btn', data: { 'confirm': 'Please verify is all details are correct' } %>
+  <%= f.submit 'Submit', class: 'btn btn-custom', id: 'add-new-btn', data: { 'confirm': 'Please verify is all details are correct' } %>
 <% end %>
