--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-inverse no-margin-btm">
+<nav class="navbar navbar-custom no-margin-btm">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="<%= admin_path %>">HostelMate</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="<%= admin_path %>">Home</a></li>
+      <li><a href="<%= admin_path %>">Home</a></li>
       <li><a href="<%= hostellers_path %>">Hostellers</a></li>
       <li><a href="<%= buildings_path %>">Building(s)</a></li>
       <li><a href="#">Page 3</a></li>
