--- a/app/assets/stylesheets/fixed_assets.scss
+++ b/app/assets/stylesheets/fixed_assets.scss
@@ -70,11 +70,11 @@
   }
 }
 
+
 .footer {
-  position: fixed;
+  margin-top: 20px;
   padding: 10px;
   left: 0;
-  bottom: 0;
   width: 100%;
   background-color: #eaf0f2;
   color: black;
