--- a/app/assets/stylesheets/hosteller.scss
+++ b/app/assets/stylesheets/hosteller.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the hosteller controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#users{
+  width: 50%;
+  display: inline;
+}
+
+.form-control:focus {
+  border-color: #8c54a1;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(140, 84, 161);
+}
+
+.flat-btn{
+  border-radius: 0px;
+  margin-bottom: 4px;
+}
