--- a/app/views/hosteller/index.html.erb
+++ b/app/views/hosteller/index.html.erb
@@ -2,13 +2,12 @@
   <%= Date.current.strftime("%B") %>
 </div>
 
-<div>
-  <input type="text" id="users"/>
-  <input type="button" id="search-btn" value="Search"/>
+<div class="text-center" style="margin-top:50px;">
+  <input type="text" id="users" class="form-control input-lg" id="search-bar"/>
+  <input type="button" id="search-btn" value="Search" class="btn btn-custom flat-btn"/>
+  <%= button_to 'Add New', new_hosteller_path, :method => :get, :class => 'btn btn-custom flat-btn' %>
+
 </div>
-<ul>
-  <li><%= button_to 'Add New', new_hosteller_path, :method => :get %></li>
-</ul>
 
 <div id="hosteller-data">
 
