--- a/app/assets/stylesheets/fixed_assets.scss
+++ b/app/assets/stylesheets/fixed_assets.scss
@@ -70,31 +70,40 @@
   }
 }
 
-
-.footer {
-  margin-top: 20px;
-  padding: 10px;
-  left: 0;
-  width: 100%;
-  background-color: #eaf0f2;
-  color: black;
-  text-align: center;
+* {
+  margin: 0;
 }
+html, body {
+  height: 100%;
+}
+.wrapper {
+  min-height: 100%;
+  height: 100%;
+  margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+}
+.footer, .push {
+  height: 155px; /* .push must be the same height as .footer */
+}
+
 
 .no-margin-btm{
   margin-bottom: unset !important;
 }
 
-.btn-custom,.btn-custom:hover,.btn-custom:focus{
+.btn-custom,.btn-custom:focus{
   background-color: #8c54a1;
   color:#ffffff !important;
   font-size:14px;
-  border-radius: 26px;
   /* border-radius: calc(100%/2); */
   padding:12px 30px;
   //text-transform:uppercase;
   outline:0;
   font-weight:400 !important;
+}
+
+.btn-custom:hover{
+  background-color: #a845ce;
+
 }
 
 .inline-display{
