--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
       <li><a href="<%= admin_path %>">Home</a></li>
       <li><a href="<%= hostellers_path %>">Hostellers</a></li>
       <li><a href="<%= buildings_path %>">Building(s)</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Administration</a></li>
       <li><a href="<%= logout_path %>" style="float:right;">Logout</a></li>
     </ul>
   </div>
