--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,22 @@
 <nav class="navbar navbar-custom no-margin-btm">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="<%= admin_path %>">HostelMate</a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="<%= home_path %>">Hostelmate</a>
     </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+
     <ul class="nav navbar-nav">
-      <li><a href="<%= admin_path %>">Home</a></li>
+      <li><a href="<%= home_path %>">Home</a></li>
       <li><a href="<%= hostellers_path %>">Hostellers</a></li>
       <li><a href="<%= buildings_path %>">Building(s)</a></li>
-      <li><a href="#">Administration</a></li>
+      <li><a href="<%=  %>">Administration</a></li>
       <li><a href="<%= logout_path %>" style="float:right;">Logout</a></li>
     </ul>
+    </div>
   </div>
 </nav>
