--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,24 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <header>
   <% if session[:user_id].present? %>
     <%= render partial: "shared/header"%>
   <% end %>
 </header>
+
 <body>
-<%= render partial: "shared/flash_messages", flash: flash %>
-<div class="container-fluid demo" style="margin-top:50px;">
-  <input type="hidden" id="_user_id" value="<%=session[:user_id]%>">
-  <%= yield %>
-</div>
+  <%= render partial: "shared/flash_messages", flash: flash %>
+  <div class="container-fluid demo" style="margin-top:50px;">
+    <input type="hidden" id="_user_id" value="<%=session[:user_id]%>">
+    <%= yield %>
+  </div>
 </body>
 
-<footer class="footer">
-  <% if session[:user_id].present? %>
-    <%= render partial: "shared/footer"%>
-  <% end %>
-</footer>
+  <footer class="footer hidden-xs">
+    <% if session[:user_id].present? %>
+      <%= render partial: "shared/footer"%>
+    <% end %>
+  </footer>
 </html>
