Revert "starting changes with home index"
This reverts commit 6cb007c3fa2e2fd39404bd455494b22f0a18815f.

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,6 +3,7 @@
 <% end %>
 
 
+<div class="container-fluid">
   <div class="row content">
     <div class="col-sm-3 sidenav hidden-xs">
       <h2>Logo</h2>
@@ -23,14 +24,14 @@
       <div class="row">
         <div class="col-sm-3">
           <div class="well">
-            <h4>Hostellers</h4>
-            <p><%= @user_index_details[:hosteller_count] %></p>
+            <h4>Users</h4>
+            <p>1 Million</p>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="well">
-            <h4>Buildings</h4>
-            <p><%= @user_index_details[:building_count] %></p>
+            <h4>Pages</h4>
+            <p>100 Million</p>
           </div>
         </div>
         <div class="col-sm-3">
@@ -83,5 +84,6 @@
       </div>
     </div>
   </div>
+</div>
 
 <div id="snackbar">You have successfully logged in!</div>
